@@ -1,14 +1,0 @@
-/*
- * $Id$
- *
- * Copyright 2016 Allen D. Ball.  All rights reserved.
- */
-/**
- * See {@link org.apache.http.client}.
- *
- * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
- */
-@Manifest.Section
-package ball.http.client;
-
-import ball.annotation.Manifest;
